arreglo de bugs

--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -17,8 +17,8 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- Llamada a las hojas de estilos propios de CSS -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/clientes.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/clientes.css" rel="stylesheet">
 </head>
 
 <body>
