--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -17,7 +17,7 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/plantilla.css" rel="stylesheet">
     <link href="../../recursos/estilos/privado/detalles_usuario.css" rel="stylesheet">
 </head>
 
@@ -35,7 +35,7 @@
             <a>
                 <!--Contenedor de informacion del perfil para que edite y que funcinoa como un redirreccionar-->
                 <div class="contenedor d-flex flex-row justify-content-start flex-wrap shadow" onclick="showFormUser()">
-                    <img src="/recursos/imagenes/icons/UserIconG.svg" width="100px" height="100px" class="me-2">
+                    <img src="../../recursos/imagenes/icons/UserIconG.svg" width="100px" height="100px" class="me-2">
                     <!--Contenedor de perfil y descripcion-->
                     <div class="d-flex flex-column mt-3">
                         <div class="ContenedorTitulo2 position-relative">
@@ -53,7 +53,7 @@
                 <!--Contenedor de informacion del perfil para que edite y que funcinoa como un redirreccionar-->
                 <div class="contenedor d-flex flex-row justify-content-start flex-wrap shadow mt-5 col-12"
                     onclick="showConDetails()">
-                    <img src="/recursos/imagenes/Vector (1).svg" width="100px" height="100px" class="me-2">
+                    <img src="../../recursos/imagenes/Vector (1).svg" width="100px" height="100px" class="me-2">
                     <!--Contenedor de perfil y descripcion-->
                     <div class="d-flex flex-column mt-3">
                         <div class="ContenedorTitulo2 position-relative">
@@ -85,7 +85,7 @@
                 <div class="contenedorCabecera d-flex flex-row align-items-center flex-wrap mb-2">
                     <div class="contenedorImg">
                         <!-- Contenedor para la imagen del usuario -->
-                        <img src="/recursos/imagenes/icons/Account.svg" width="150px" height="150px">
+                        <img src="../../recursos/imagenes/icons/Account.svg" width="150px" height="150px">
                     </div>
                     <div class="contenedorInfo d-flex flex-column ms-4">
                         <!-- Contenedor de información del usuario -->
