--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -33,7 +33,7 @@
                 id="encabezadoBuscador">
                 <!-- Div de la imagen -->
                 <div class="col-lg-2 col-md-4 col-sm-5 col-5 d-flex justify-content-center align-items-center me-4">
-                    <img src="/recursos/imagenes/marcas/adidas.svg" alt="Foto de la marca" id="imagenMarca">
+                    <img src="../../recursos/imagenes/marcas/adidas.svg" alt="Foto de la marca" id="imagenMarca">
                 </div>
                 <!-- Div del texto -->
                 <div
