--- a/vistas/publico/carrito.html
+++ b/vistas/publico/carrito.html
@@ -126,8 +126,8 @@ TODO importante // realtando algo
             </div>
             <!--FINALIZAICON DE LA COMPRA-->
             <div class="col-lg-12 mb-3 d-none" id="compraDatos">
-                <img src="/recursos/imagenes/figuraIrregular1.svg" class="position-absolute figuraI1 z-0">
-                <img src="/recursos/imagenes/figuraIrregular2.svg" class="position-absolute figuraI2 z-0">
+                <img src="../../recursos/imagenes/figuraIrregular1.svg" class="position-absolute figuraI1 z-0">
+                <img src="../../recursos/imagenes/figuraIrregular2.svg" class="position-absolute figuraI2 z-0">
                 <!--Encabezado-->
                 <div class="col-lg-12 d-flex justify-content-center align-items-center">
                     <div class="col-lg-10 mt-4 mb-4 d-flex align-items-center">
