--- a/vistas/publico/configuraciones.html
+++ b/vistas/publico/configuraciones.html
@@ -34,7 +34,7 @@
                 <!--Contenedor de informacion del perfil para que eedite y que funcinoa como un redirreccionar-->
                 <div class="contenedor1 d-flex flex-sm-column flex-lg-row flex-md-row flex-column align-items-center col-lg-5 col-md-8 col-sm-11 col-11 shadow align-self-stretch p-3 mb-5
                 " onclick="showPedidos()">
-                    <img src="/recursos/imagenes/Quick delivery.svg" width="130px" height="130px" class="me-2">
+                    <img src="../../recursos/imagenes/Quick delivery.svg" width="130px" height="130px" class="me-2">
                     <!--Contenedor de perfil y descripcion-->
                     <div class="d-flex flex-column mt-3 ms-4">
                         <div class="ContenedorTitulo position-relative">
@@ -49,7 +49,7 @@
                 <!--Contenedor de informacion del perfil para que eedite y que funcinoa como un redirreccionar-->
                 <div class="contenedor2 d-flex flex-sm-column flex-lg-row flex-md-row flex-column align-items-center col-lg-5 col-md-8 col-sm-11 col-11 shadow align-self-stretch p-3 mt-5 mt-sm-5 mt-lg-0 mb-5 mt-md-0
                 " onclick="showFormUser()">
-                    <img src="/recursos/imagenes/icons/UserIconG.svg" width="100px" height="100px" class="ms-3">
+                    <img src="../../recursos/imagenes/icons/UserIconG.svg" width="100px" height="100px" class="ms-3">
                     <!--Contenedor de perfil y descripcion-->
                     <div class="d-flex flex-column mt-3 ms-4">
                         <div class="ContenedorTitulo position-relative">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="contenedor2 d-flex flex-sm-column flex-lg-row flex-md-row flex-column align-items-center col-lg-5 col-md-8 col-sm-11 col-11 shadow align-self-stretch p-3 mt-5 mt-sm-5 mt-lg-0 mt-md-0
                 " onclick="openDetails()">
-                    <img src="/recursos/imagenes/Vector (1).svg" width="100px" height="100px" class="ms-3">
+                    <img src="../../recursos/imagenes/Vector (1).svg" width="100px" height="100px" class="ms-3">
                     <!--Contenedor de perfil y descripcion-->
                     <div class="d-flex flex-column mt-3 ms-4">
                         <div class="ContenedorTitulo position-relative">
@@ -81,7 +81,7 @@
                 <div class="contenedorCabecera d-flex flex-row align-items-center flex-wrap mb-2">
                     <div class="contenedorImg">
                         <!-- Contenedor para la imagen del usuario -->
-                        <img src="/recursos/imagenes/icons/Account.svg" width="150px" height="150px">
+                        <img src="../../recursos/imagenes/icons/Account.svg" width="150px" height="150px">
                     </div>
                     <div class="contenedorInfo d-flex flex-column ms-4">
                         <!-- Contenedor de información del usuario -->
