--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -17,8 +17,8 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/comentarios.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/comentarios.css" rel="stylesheet">
 </head>
 
 <body>
@@ -73,7 +73,7 @@
                 <div class="d-flex flex-row flex-wrap contenedorElemento1 justify-content-between">
                     <div class="container p-0 m-0">
                         <button class="btn" type="button" onclick="volver()">
-                            <img src="/recursos/imagenes/flecha.png" width="25px" height="30px">
+                            <img src="../../recursos/imagenes/flecha.png" width="25px" height="30px">
                         </button> <!--Boton para volver a la pagina de comentarios-->
                     </div>
                     <div
@@ -138,7 +138,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades/privado.js"></script>
-    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <script type="text/javascript" src="../../controlador/privado/comentario.js"></script>
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
