--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -17,8 +17,8 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/marcas.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/marcas.css" rel="stylesheet">
 </head>
 
 <body>
@@ -113,19 +113,19 @@
                             <div class="cardContainer m-5 d-flex flex-wrap gap-5">
                                 <!-- Tarjetas de marcas con imágenes -->
                                 <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                                 <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                                 <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                                 <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                                 <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="/recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
+                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades/privado.js"></script>
-    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/marcas.js"></script>
 </body>
