--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -17,8 +17,8 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/panel_principal.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/panel_principal.css" rel="stylesheet">
 </head>
 
 <body>
@@ -55,7 +55,7 @@
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador general de la aplicación -->
-    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades/privado.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
