--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/zapatos.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/zapatos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -68,35 +68,35 @@
                             <span onclick="slideRight()" class="btn"></span>
                             <div id="slider">
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                                 </div>
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                                 </div>
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                                 </div>
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                                 </div>
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                                 </div>
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                                 </div>
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                                 </div>
                                 <div class="slide">
-                                    <img src="/recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
+                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
                                     <span>Nike Dunk Low</span>
                             </div>
                         </div>
@@ -304,11 +304,11 @@
                                                 <td data-labelT="Talla">01</td>
                                                 <td data-labelS="Stock Actual">01</td>
                                                 <td> <button class="Verde"> <img class="note"
-                                                            src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                            src="../../recursos/imagenes/icons/notebook.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                     <button class="Rojo"> <img class="note"
-                                                            src="/recursos/imagenes/basura.svg" width="35px"
+                                                            src="../../recursos/imagenes/basura.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                 </td>
@@ -318,11 +318,11 @@
                                                 <td data-labelT="Talla">01</td>
                                                 <td data-labelS="Stock Actual">01</td>
                                                 <td> <button class="Verde"> <img class="note"
-                                                            src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                            src="../../recursos/imagenes/icons/notebook.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                     <button class="Rojo"> <img class="note"
-                                                            src="/recursos/imagenes/basura.svg" width="35px"
+                                                            src="../../recursos/imagenes/basura.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                 </td>
@@ -332,11 +332,11 @@
                                                 <td data-labelT="Talla">01</td>
                                                 <td data-labelS="Stock Actual">01</td>
                                                 <td> <button class="Verde"> <img class="note"
-                                                            src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                            src="../../recursos/imagenes/icons/notebook.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                     <button class="Rojo"> <img class="note"
-                                                            src="/recursos/imagenes/basura.svg" width="35px"
+                                                            src="../../recursos/imagenes/basura.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                 </td>
@@ -346,11 +346,11 @@
                                                 <td data-labelT="Talla">01</td>
                                                 <td data-labelS="Stock Actual">01</td>
                                                 <td> <button class="Verde"> <img class="note"
-                                                            src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                            src="../../recursos/imagenes/icons/notebook.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                     <button class="Rojo"> <img class="note"
-                                                            src="/recursos/imagenes/basura.svg" width="35px"
+                                                            src="../../recursos/imagenes/basura.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                 </td>
@@ -360,11 +360,11 @@
                                                 <td data-labelT="Talla">01</td>
                                                 <td data-labelS="Stock Actual">01</td>
                                                 <td> <button class="Verde"> <img class="note"
-                                                            src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                            src="../../recursos/imagenes/icons/notebook.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                     <button class="Rojo"> <img class="note"
-                                                            src="/recursos/imagenes/basura.svg" width="35px"
+                                                            src="../../recursos/imagenes/basura.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                 </td>
@@ -374,11 +374,11 @@
                                                 <td data-labelT="Talla">01</td>
                                                 <td data-labelS="Stock Actual">01</td>
                                                 <td> <button class="Verde"> <img class="note"
-                                                            src="/recursos/imagenes/icons/notebook.svg" width="35px"
+                                                            src="../../recursos/imagenes/icons/notebook.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                     <button class="Rojo"> <img class="note"
-                                                            src="/recursos/imagenes/basura.svg" width="35px"
+                                                            src="../../recursos/imagenes/basura.svg" width="35px"
                                                             height="35px">
                                                     </button>
                                                 </td>
