--- a/vistas/publico/detalle_zapato.html
+++ b/vistas/publico/detalle_zapato.html
@@ -77,21 +77,21 @@
                                 <div class="comentarioFooter d-flex flex-row justify-content-end flex-wrap">
                                     <!--DIV de las estrellas-->
                                     <div class="estrellasImg">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
                                     </div>
                                     <!--DIV del numero de la calificacion-->
                                     <div class="estrellasNum">
                                         <div class="d-flex flex-row-reverse align-items-center mt-2 ">
-                                            <img src="/recursos/imagenes/icons/starFill.svg" alt="">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
                                             <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar2">5</p>
                                         </div>
                                     </div>
@@ -131,21 +131,21 @@
 
                                 <div class="comentarioFooter d-flex flex-row justify-content-end flex-wrap">
                                     <div class="estrellasImg">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
                                     </div>
 
                                     <div class="estrellasNum">
                                         <div class="d-flex flex-row-reverse align-items-center mt-2 ">
-                                            <img src="/recursos/imagenes/icons/starFill.svg" alt="">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
                                             <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar2">5</p>
                                         </div>
                                     </div>
@@ -185,21 +185,21 @@
 
                                 <div class="comentarioFooter d-flex flex-row justify-content-end flex-wrap">
                                     <div class="estrellasImg">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
                                     </div>
 
                                     <div class="estrellasNum">
                                         <div class="d-flex flex-row-reverse align-items-center mt-2 ">
-                                            <img src="/recursos/imagenes/icons/starFill.svg" alt="">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
                                             <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar2">5</p>
                                         </div>
                                     </div>
@@ -239,21 +239,21 @@
 
                                 <div class="comentarioFooter d-flex flex-row justify-content-end flex-wrap">
                                     <div class="estrellasImg">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
-                                        <img src="/recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
+                                        <img src="../../recursos/imagenes/icons/starFill.svg" class="m-2" width="30px"
                                             height="30px">
                                     </div>
 
                                     <div class="estrellasNum">
                                         <div class="d-flex flex-row-reverse align-items-center mt-2 ">
-                                            <img src="/recursos/imagenes/icons/starFill.svg" alt="">
+                                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
                                             <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar2">5</p>
                                         </div>
                                     </div>
@@ -282,7 +282,7 @@
                         </h3>
                         <!-- CALIFICACION-->
                         <div class="contenedorCalificacion d-flex flex-row align-items-center ms-4">
-                            <img src="/recursos/imagenes/icons/starFill.svg" alt="">
+                            <img src="../../recursos/imagenes/icons/starFill.svg" alt="">
                             <p class="titillium-web-bold text25 m-0 align-baselin clYellowStar2">5</p>
                         </div>
                     </div>
