--- a/vistas/publico/sobre_nosotros.html
+++ b/vistas/publico/sobre_nosotros.html
@@ -70,7 +70,7 @@ TODO importante // realtando algo
                 <div class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3">
                     <!--IMAGEN-->
                     <div>
-                        <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
+                        <img src="../../recursos/imagenes/imgMmbr.svg" class="imguser">
                     </div>
 
                     <div class="containerTextMmber">
@@ -95,7 +95,7 @@ TODO importante // realtando algo
                 <div
                     class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3 position-relative">
                     <div>
-                        <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
+                        <img src="../../recursos/imagenes/imgMmbr.svg" class="imguser">
                     </div>
 
                     <div class="containerTextMmber">
@@ -119,7 +119,7 @@ TODO importante // realtando algo
                 <div
                     class="d-flex flex-column mx-3 text-center mmbr col-12 col-lg-3 col-md-5 col-sm-12 p-3 position-relative">
                     <div>
-                        <img src="/recursos/imagenes/imgMmbr.svg" class="imguser">
+                        <img src="../../recursos/imagenes/imgMmbr.svg" class="imguser">
                     </div>
 
                     <div class="containerTextMmber">
