CRUD de pedidos y comeinzo de clientes con tabla (no funcional)

--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -79,17 +79,8 @@
                                             </tr>
                                         </thead>
                                         <!-- Cuerpo de la tabla -->
-                                        <tbody class="text-center">
-                                            <!-- Fila de ejemplo -->
-                                            <tr class="table-row" ondblclick="openDetails(this)">
-                                                <td>1</td>
-                                                <td>Jacobo</td>
-                                                <td>Emiliano</td>
-                                                <td>765839343-3</td>
-                                                <td>5434-5343</td>
-                                                <td>emi.jaco@gmail.com</td>
-                                                <td>Vigente</td>
-                                            </tr>
+                                        <tbody class="text-center" id="tableBody">
+                                            
                                         </tbody>
                                     </table>
                                 </div>
