--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -59,65 +59,65 @@
                                 <h1 class="titillium-web-regular text25 text-white mb-3 mt-1">Agregar Trabajador</h1>
                             </div>
                             <div class="ContenedorForm">
-                                <form class="row needs-validation form1" novalidate>
+                                <form class="row needs-validation form1" novalidate id="AddForm">
                                     <div class="col-md-6">
                                         <label for="nombreInput" class="form-label">Nombres</label>
-                                        <input type="text" class="form-control" id="nombreInput"
+                                        <input type="text" class="form-control" id="nombreInput" name="nombreInput"
                                             placeholder="Ingresa los nombres" required>
                                     </div>
                                     <div class="col-md-6">
                                         <label for="apellidosInput" class="form-label ">Apellidos</label>
-                                        <input type="text" class="form-control" id="apellidosInput"
+                                        <input type="text" class="form-control" id="apellidosInput" name="apellidosInput"
                                             placeholder="Ingresa los apellidos" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="duiInput" class="form-label ">DUI</label>
-                                        <input type="text" class="form-control" id="duiInput"
+                                        <input type="text" class="form-control" id="duiInput"  name="duiInput"
                                             placeholder="Ingresa el dui" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="telefonoInput" class="form-label ">Teléfono</label>
-                                        <input type="text" class="form-control" id="telefonoInput"
+                                        <input type="text" class="form-control" id="telefonoInput" name="telefonoInput"
                                             placeholder="Ingresa el número telefonico" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="correoInput" class="form-label ">Correo electrónico</label>
-                                        <input type="email" class="form-control" id="correoInput"
+                                        <input type="email" class="form-control" id="correoInput" names="correoInput" 
                                             placeholder="Ingresa el correo electronico" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
-                                        <input type="date" class="form-control" id="fechanInput"
+                                        <input type="date" class="form-control" id="fechanInput" name="fechanInput" 
                                             placeholder="Ingresa la fecha de nacimiento" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="fecharInput" class="form-label">Fecha de Registro</label>
-                                        <input type="date" class="form-control" id="fecharInput" placeholder="21/2/2024"
-                                            required>
+                                        <input type="date" class="form-control" id="fecharInput" name="fecharInput"
+                                        placeholder="21/2/2024" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="estadoInput" class="form-label">Estado del
                                             Trabajador</label>
-                                        <select class="form-label form-select" id="estadoInput"
+                                        <select class="form-label form-select" id="estadoInput" name="estadoInput"
                                             aria-label="Estado de usuario" required>
                                             <option value="" disabled selected>Selecciona un estado</option>
-                                            <option value="1">Vigente</option>
-                                            <option value="1">Inactivo</option>
+                                            <option value="1">Activo</option>
+                                            <option value="2">Desactivo</option>
                                         </select>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="nivelInput" class="form-label">Nivel de Usuario</label>
-                                        <select class="form-label form-select" id="nivelInput"
+                                        <select class="form-label form-select" id="nivelInput" name="nivelInput"
                                             aria-label="Nivel de usuario" required>
                                             <option value="" disabled selected>Selecciona un nivel</option>
                                             <option value="1">Admin</option>
-                                            <option value="1">Empleado</option>
-                                            <option value="2">Repartidor</option>
+                                            <option value="2">Empleado</option>
+                                            <option value="3">Repartidor</option>
                                         </select>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="contraInput" class="form-label ">Contraseña</label>
-                                        <input type="password" class="form-control" id="contraInput"
+                                        <input type="password" class="form-control" id="contraInput" name="contraInput"
                                             placeholder="Ingresa la contraseña" required>
                                     </div>
 
@@ -127,7 +127,7 @@
                                 <button type="button" onclick="returnBack()"
                                     class="btn btn2 btn-primary mx-3 my-2 shadow text18 titillium-web-regular">Cancelar</button>
                                 <button class="btn btn3 btn-primary shadow my-2 text18 titillium-web-regular"
-                                    onclick="addSave()" type="submit">Agregar</button>
+                                    onclick="addSave()">Agregar</button>
                             </div>
                         </div>
                     </div>
