--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -82,7 +82,7 @@
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="correoInput" class="form-label ">Correo electrónico</label>
-                                        <input type="email" class="form-control" id="correoInput" names="correoInput" 
+                                        <input type="email" class="form-control" id="correoInput" name="correoInput" 
                                             placeholder="Ingresa el correo electronico" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
