--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -111,23 +111,10 @@
                         <!-- Contenedor de tarjetas de marcas -->
                         <div class="d-flex flex-column mb-3 justify-content-center">
                             <div class="cardContainer m-5 d-flex flex-wrap gap-5 justify-content-lg-center
-                                justify-content-md-start justify-content-start">
+                                justify-content-md-start justify-content-start" id="tableBody">
                                 <!-- Tarjetas de marcas con imágenes -->
-                                <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
-                                </div>
-                                <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
-                                </div>
-                                <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
-                                </div>
-                                <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
-                                </div>
-                                <div class="card sizeCard" ondblclick="openDetails()">
-                                    <img src="../../recursos/imagenes/marcas/adidas.svg" class="card-img-top" />
-                                </div>
+                                <div class="d-none" id="IdMarca"></div>
+                                
                             </div>
                         </div>
                     </div>
